--- a/Exercise01.html
+++ b/Exercise01.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Exercise 1</title>
 </head>
 
@@ -14,17 +15,17 @@
                 <th>Videos</th>
             </tr>
             <tr>
-                <td><img src="/img/supermoon-moon-smartphone-photo-picture.jpg" width="1600px" height="1600px"></td>
+                <td><img src="supermoon-moon-smartphone-photo-picture.jpg" width="1600px" height="1600px"></td>
                 <td></td>
                 <td>37</td>
             </tr>
             <tr>
-                <td><img src="/img/No Time to Die (2020).png" width="577" height="846" ></td>
+                <td><img src="No Time to Die (2020).png" width="577" height="846" ></td>
                 <td>Alexis</td>
                 <td>56</td>
             </tr>
             <tr>
-                <td><img src="/img/Screenshot.jpg" width="1111" height="741"></td>
+                <td><img src="Screenshot.jpg" width="1111" height="741"></td>
                 <td>Smith</td>
                 <td>77</td>
             </tr>
