--- a/Exercise01.html
+++ b/Exercise01.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Exercise 1</title>
 </head>
 
@@ -14,19 +15,26 @@
                 <th>Videos</th>
             </tr>
             <tr>
-                <td><img src="/img/supermoon-moon-smartphone-photo-picture.jpg" width="1600px" height="1600px"></td>
-                <td></td>
-                <td>37</td>
+                <td><img src="supermoon-moon-smartphone-photo-picture.jpg" width="10%" height="10%"></td>
+                <td>
+                    <audio>
+                        <source src="bensound-acousticbreeze.mp3" type="audio/ogg">Your browser does not support the
+                        audio element.
+                    </audio></td>
+                <td><iframe src="https://www.youtube.com/watch?v=CjK74mJltTM&list=PL5atuuYQ4R5dZVW-GLacdvf5OifoHtUPP"
+                        width="500px" height="500px"></td>
             </tr>
             <tr>
-                <td><img src="/img/No Time to Die (2020).png" width="577" height="846" ></td>
-                <td>Alexis</td>
-                <td>56</td>
+                <td><img src="No Time to Die (2020).png" width="10%" height="10%"></td>
+                <td><audio src="bensound-betterdays.mp3" type="audio/ogg"></td>
+                <td><iframe src="https://www.youtube.com/watch?v=JL_m8oh31Dc" width="500px" height="500px"
+                        frameborder="0"></iframe></td>
             </tr>
             <tr>
-                <td><img src="/img/Screenshot.jpg" width="1111" height="741"></td>
-                <td>Smith</td>
-                <td>77</td>
+                <td><img src="Screenshot.jpg" width="10%" height="10%"></td>
+                <td><audio src="bensound-sunny.mp3" type="audio/ogg"></td>
+                <td><video src="Pexels Videos 1526909.mp4" width="500px" height="500px" controls
+                        poster="https://archive.org/download/WebmVp8Vorbis/webmvp8.gif"></video></td>
             </tr>
         </table>
     </main>
