audio added on row 2,3

--- a/Exercise01.html
+++ b/Exercise01.html
@@ -28,13 +28,13 @@
             </tr>
             <tr>
                 <td><img src="No Time to Die (2020).png" width="10%" height="10%"></td>
-                <td><audio src="bensound-betterdays.mp3" type="audio/ogg"></td>
+                <td><audio controls> <source src="bensound-betterdays.mp3" type="audio/ogg"></td>
                 <td><iframe src="https://www.youtube.com/watch?v=JL_m8oh31Dc" width="500px" height="500px"
                         frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td><img src="Screenshot.jpg" width="10%" height="10%"></td>
-                <td><audio src="bensound-sunny.mp3" type="audio/ogg"></td>
+                <td><audio controls><source src="bensound-sunny.mp3" type="audio/ogg"></td>
                 <td><video src="Pexels Videos 1526909.mp4" width="500px" height="500px" controls
                         poster="https://archive.org/download/WebmVp8Vorbis/webmvp8.gif"></video></td>
             </tr>
