--- a/Css basic exercise 1/index.html
+++ b/Css basic exercise 1/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Basic exercise 1</title>
 </head>
 <body>
 <div class="left" id="first">
