added External, internal and inline style

--- a/Css basic exercise 3/page 1.html
+++ b/Css basic exercise 3/page 1.html
@@ -6,13 +6,37 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Exercise 3 css basic
     </title>
+    <style>
+        h1{
+    color: blue;
+    font-weight: bold;
+}
+p{
+    font-family: Impact, Charcoal, sans-serif;
+}
+ul{
+    font-style: italic;
+}
+h3{
+    font-weight: bold;
+}
+h2{
+    font-weight: bold;
+}
+#txt-summary-short{
+font-size: 20px;
+}
+#txt-summary-long{
+    font-size: 10px;
+}
+    </style>
 </head>
 
 <body>
     <main>
         <article>
             <section>
-                <h1>Breaking News!</h1>
+                <h1 style="color: orange;">Breaking News!</h1>
             </section>
             <section>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sollicitudin mollis neque. Nulla
