--- a/Css basic exercise 3/page 1.html
+++ b/Css basic exercise 3/page 1.html
@@ -7,6 +7,14 @@
     <title>Exercise 3 css basic
     </title>
     <style>
+        aside {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: lightgray;
+}
         h1{
     color: blue;
     font-weight: bold;
@@ -38,6 +46,7 @@ font-size: 20px;
             <section>
                 <h1 style="color: orange;">Breaking News!</h1>
             </section>
+            <center>
             <section>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sollicitudin mollis neque. Nulla
                     consequat ligula id felis rutrum, sed porta lorem dignissim. Mauris commodo felis ut feugiat
@@ -49,6 +58,14 @@ font-size: 20px;
                     viverra massa non eleifend. Nunc id diam imperdiet, iaculis sem in, semper elit. Suspendisse
                     potenti. Etiam quis dapibus sapien. </p>
             </section>
+        </center>
+            <aside>
+            <h4>this is a sidebar</h4>
+            <span>lobortis eu. Aliquam est libero, volutpat nec luctus tincidunt, iaculis et enim. Integer vulputate
+                    viverra massa non eleifend. Nunc id diam imperdiet, iaculis sem in, semper elit. Suspendisse
+                    potenti. Etiam quis dapibus sapien.
+            </span>                
+            </aside>
         </article>
         <h3>Authors:</h3>
         <ul>
@@ -77,7 +94,13 @@ font-size: 20px;
                     ornare augue sed lacus condimentum imperdiet. Vivamus vel nibh augue. </p>
             </section>
         </article>
+        
     </main>
+    <footer>
+            fermentum. Fusce sit amet molestie dui. Fusce rutrum nulla sit amet mi egestas, sed semper lacus
+                    dignissim. Morbi laoreet magna at lacus molestie imperdiet. Phasellus vel vulputate purus. Sed
+                    ornare augue sed lacus condimentum imperdiet. Vivamus vel nibh augue.
+    </footer>
 </body>
 
 </html>
