--- a/Css basic exercise 3/page 1.html
+++ b/Css basic exercise 3/page 1.html
@@ -3,68 +3,44 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_main.css">
+    <link rel="stylesheet" type="text/css" href="style_section1.css">
+    <link rel="stylesheet" type="text/css" href="style_section2.css">
+    <link rel="stylesheet" type="text/css" href="style_section3.css">
+    <link rel="stylesheet" type="text/css" href="style_section4.css">
+    <link rel="stylesheet" type="text/css" href="style_section5.css">
     <title>Exercise 3 css basic
     </title>
-    <style>
-        aside {
-  width: 30%;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: italic;
-  background-color: lightgray;
-}
-        h1{
-    color: blue;
-    font-weight: bold;
-}
-p{
-    font-family: Impact, Charcoal, sans-serif;
-}
-ul{
-    font-style: italic;
-}
-h3{
-    font-weight: bold;
-}
-h2{
-    font-weight: bold;
-}
-#txt-summary-short{
-font-size: 20px;
-}
-#txt-summary-long{
-    font-size: 10px;
-}
-    </style>
 </head>
 
 <body>
     <main>
         <article>
-            <section>
-                <h1 style="color: orange;">Breaking News!</h1>
+            <section class="section1">
+                <h1>Breaking News!</h1>
             </section>
-            <center>
-            <section>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sollicitudin mollis neque. Nulla
+
+            <section class="section2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sollicitudin mollis neque.
+                    Nulla
                     consequat ligula id felis rutrum, sed porta lorem dignissim. Mauris commodo felis ut feugiat
                     commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
                     Aliquam venenatis lorem dolor, in consectetur elit fringilla vel. Nullam vel tortor ac enim
                     malesuada hendrerit a quis velit. In suscipit euismod velit, sed dictum augue luctus ut. Nunc
-                    facilisis purus nibh, vel condimentum libero semper eget. Nam aliquam enim nunc, at blandit velit
-                    lobortis eu. Aliquam est libero, volutpat nec luctus tincidunt, iaculis et enim. Integer vulputate
+                    facilisis purus nibh, vel condimentum libero semper eget. Nam aliquam enim nunc, at blandit
+                    velit
+                    lobortis eu. Aliquam est libero, volutpat nec luctus tincidunt, iaculis et enim. Integer
+                    vulputate
                     viverra massa non eleifend. Nunc id diam imperdiet, iaculis sem in, semper elit. Suspendisse
                     potenti. Etiam quis dapibus sapien. </p>
             </section>
-        </center>
+
             <aside>
-            <h4>this is a sidebar</h4>
-            <span>lobortis eu. Aliquam est libero, volutpat nec luctus tincidunt, iaculis et enim. Integer vulputate
+                <h4>This is a sidebar</h4>
+                <span>lobortis eu. Aliquam est libero, volutpat nec luctus tincidunt, iaculis et enim. Integer vulputate
                     viverra massa non eleifend. Nunc id diam imperdiet, iaculis sem in, semper elit. Suspendisse
                     potenti. Etiam quis dapibus sapien.
-            </span>                
+                </span>
             </aside>
         </article>
         <h3>Authors:</h3>
@@ -74,17 +50,19 @@ font-size: 20px;
             <li>G. Man</li>
         </ul>
         <article>
-            <section>
+            <section class="section3">
                 <h2>Also on the News:</h2>
             </section>
-            <section>
+            <section class="section4">
                 <h3>Summary:</h3>
-                <p id="txt-summary-short">Vivamus eu orci sapien. Sed et viverra elit. Cras ac malesuada neque. Fusce eu mi fringilla,
+                <p id="txt-summary-short">Vivamus eu orci sapien. Sed et viverra elit. Cras ac malesuada neque. Fusce eu
+                    mi fringilla,
                     porttitor risus et, euismod orci. Cras iaculis nunc id tempor bibendum. Cras pretium lectus
                     condimentum turpis laoreet, sed mollis diam auctor. Sed et quam lacus. </p>
             </section>
-            <section>
-                <p id="txt-summary-long">Sed posuere sapien vitae vehicula congue. Praesent convallis lacus metus, ac blandit magna
+            <section class="section5">
+                <p id="txt-summary-long">Sed posuere sapien vitae vehicula congue. Praesent convallis lacus metus, ac
+                    blandit magna
                     ullamcorper vel. Pellentesque ac commodo dolor. Integer pretium diam rhoncus diam faucibus
                     imperdiet. Cras accumsan vulputate nunc ut suscipit. Aliquam a turpis imperdiet, rhoncus sapien vel,
                     sollicitudin massa. Nulla euismod, sem tempus sollicitudin vestibulum, tellus orci congue quam, at
@@ -94,12 +72,12 @@ font-size: 20px;
                     ornare augue sed lacus condimentum imperdiet. Vivamus vel nibh augue. </p>
             </section>
         </article>
-        
+
     </main>
     <footer>
-            fermentum. Fusce sit amet molestie dui. Fusce rutrum nulla sit amet mi egestas, sed semper lacus
-                    dignissim. Morbi laoreet magna at lacus molestie imperdiet. Phasellus vel vulputate purus. Sed
-                    ornare augue sed lacus condimentum imperdiet. Vivamus vel nibh augue.
+        fermentum. Fusce sit amet molestie dui. Fusce rutrum nulla sit amet mi egestas, sed semper lacus
+        dignissim. Morbi laoreet magna at lacus molestie imperdiet. Phasellus vel vulputate purus. Sed
+        ornare augue sed lacus condimentum imperdiet. Vivamus vel nibh augue.
     </footer>
 </body>
 
