--- a/HTML exercise 1/Exercise01.html
+++ b/HTML exercise 1/Exercise01.html
@@ -15,7 +15,7 @@
                 <th>Videos</th>
             </tr>
             <tr>
-                <td><img src="supermoon-moon-smartphone-photo-picture.jpg" width="10%" height="10%"></td>
+                <td><img src="supermoon-moon-smartphone-photo-picture.jpg" width="500px" height="500px"></td>
                 <td>
                     <audio controls >
                     <source src="bensound-acousticbreeze.mp3" type="audio/ogg">
@@ -27,13 +27,13 @@
                         frameborder="0"></iframe></td>
             </tr>
             <tr>
-                <td><img src="No Time to Die (2020).png" width="10%" height="10%"></td>
+                <td><img src="No Time to Die (2020).png" width="500px" height="500px"></td>
                 <td><audio controls> <source src="bensound-betterdays.mp3" type="audio/ogg"></td>
                 <td><iframe src="https://www.youtube.com/watch?v=JL_m8oh31Dc" width="500px" height="500px"
                         frameborder="0"></iframe></td>
             </tr>
             <tr>
-                <td><img src="Screenshot.jpg" width="10%" height="10%"></td>
+                <td><img src="elephant.webp" width="500px" height="500px"></td>
                 <td><audio controls><source src="bensound-sunny.mp3" type="audio/ogg"></td>
                 <td><video src="Pexels Videos 1526909.mp4" width="500px" height="500px" controls
                         poster="https://archive.org/download/WebmVp8Vorbis/webmvp8.gif"></video></td>
